cli: minor fixes and cleanup of bucket props
